增加版本更新工具

--- a/Tools/Podfile
+++ b/Tools/Podfile
@@ -10,6 +10,7 @@ target 'Tools' do
 
 pod 'SDWebImage'
 pod 'Masonry', :inhibit_warnings => true
+pod 'AFNetworking', :inhibit_warnings => true
   target 'ToolsTests' do
     inherit! :search_paths
     # Pods for testing
